# MST

./: CMakeLists.txt  README.md
include/: Kruskal.h  PCKruskal.h  Prim.h  graph.h
src/: Kruskal.cpp  PCKruskal.cpp  Prim.cpp  graph.cpp  main.cpp
tests/: TestsGenerator.cpp  input.txt  output.txt  tests
